##########################
# Setup.py Configuration #
##########################
[metadata]
name = query2box
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/hyren/query2box
download_url = https://github.com/hyren/query2box/releases
project_urls =
    Bug Tracker = https://github.com/hyren/query2box/issues
    Source Code = https://github.com/hyren/query2box

# Author information
author = Hongyu Ren
# author_email = ...

# License Information
license = MIT
license_file = LICENSE

[options]
install_requires =
    torch
    tensorboardX
    tqdm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.5

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    query2box = query2box.run:main
